--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vidéo Player</title>
+  <title>Vidéo Streaming</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -12,23 +12,15 @@
       <div class="video-wrapper">
         <div class="video-box">
           <video autoplay muted playsinline></video>
-
+          <div class="pause-button"></div>
           <div class="video-overlay">
-            <h2>Vidéo 1</h2>
-            <p>Description 1</p>
+            <h2>Titre</h2>
+            <p>Description</p>
           </div>
 
           <div class="video-controls">
-            <button class="sound-toggle">
-              <!-- SVG injecté dynamiquement -->
-            </button>
-            <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="0.5" />
-          </div>
-
-          <div class="pause-button">
-            <svg viewBox="0 0 8 8" class="pause-icon" xmlns="http://www.w3.org/2000/svg">
-              <path fill="currentColor" d="M2 1L2 7L7 4Z" />
-            </svg>
+            <button class="sound-toggle"></button>
+            <input type="range" class="volume-slider" min="0" max="1" step="0.01" />
           </div>
         </div>
       </div>
