--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vidéo Streaming</title>
   <link rel="stylesheet" href="styles.css" />
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script> <!-- Ajout -->
 </head>
 <body>
   <div class="container">
     <section class="video-section">
       <div class="video-wrapper">
         <div class="video-box">
-          <video autoplay muted playsinline></video>
+          <video id="video" autoplay muted playsinline></video> <!-- Ajout id -->
           <div class="pause-button"></div>
           <div class="video-overlay">
             <h2>Titre</h2>
             <p>Description</p>
           </div>
-
           <div class="video-controls">
             <button class="sound-toggle"></button>
             <input type="range" class="volume-slider" min="0" max="1" step="0.01" />
