--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
           <!-- Sound Controls -->
           <div class="video-controls">
-            <input type="range" class="volume-slider" min="0" max="1" step="0.01" />
+            <input type="range" class="volume-slider" data-volume="low" min="0" max="1" step="0.01" />
           </div>
         </div>
       </div>
